--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-<h1>Hello GitHub Pages!</h1>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <title>我的个人网站</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: "Segoe UI", "PingFang SC", "Microsoft YaHei", sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      background: linear-gradient(120deg, #89f7fe, #66a6ff);
+      color: #333;
+    }
+    header {
+      padding: 60px 20px;
+    }
+    header h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 1.2em;
+      color: #444;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    section {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    footer {
+      margin: 40px 0;
+      color: #eee;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>你好，我是 Wang</h1>
+    <p>这是我的个人网站，记录学习与生活。</p>
+    <nav>
+      <a href="#about">关于我</a>
+      <a href="#blog">学习记录</a>
+      <a href="#contact">联系我</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>关于我</h2>
+    <p>这里写一点自我介绍，比如你的专业、兴趣、目标。</p>
+  </section>
+
+  <section id="blog">
+    <h2>学习记录</h2>
+    <p>这里可以放学习心得，比如「GitHub Pages 搭建完成！」</p>
+  </section>
+
+  <section id="contact">
+    <h2>联系我</h2>
+    <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
+  </section>
+
+  <footer>
+    <p>© 2025 Wang. Powered by GitHub Pages.</p>
+  </footer>
+</body>
+</html>
