--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <header>
-    <h1>你好，我是 Wang</h1>
+    <h1>你好，我是 王旭凡</h1>
     <p>这是我的个人网站，记录学习与生活。</p>
     <nav>
       <a href="#about">关于我</a>
@@ -60,21 +60,21 @@
 
   <section id="about">
     <h2>关于我</h2>
-    <p>这里写一点自我介绍，比如你的专业、兴趣、目标。</p>
+    <p>我是一个二次元爱好者</p>
   </section>
 
   <section id="blog">
     <h2>学习记录</h2>
-    <p>这里可以放学习心得，比如「GitHub Pages 搭建完成！」</p>
+    <p>学习心得，「GitHub Pages 搭建完成！」</p>
   </section>
 
   <section id="contact">
     <h2>联系我</h2>
-    <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
+    <p>Email: <a href="wangxufan1997@gmail.com">yourname@example.com</a></p>
   </section>
 
   <footer>
-    <p>© 2025 Wang. Powered by GitHub Pages.</p>
+    <p>© 2025 Wangxufan1997. Powered by GitHub Pages.</p>
   </footer>
 </body>
 </html>
