--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <h1>你好，我是 王旭凡</h1>
     <p>这是我的个人网站，记录学习与生活。</p>
     <nav>
-      <a href="#about">关于我</a>
-      <a href="#blog">学习记录</a>
-      <a href="#contact">联系我</a>
+      <a href="#about.HTML">关于我</a>
+      <a href="#blog.HTML">学习记录</a>
+      <a href="#contact.HTML">联系我</a>
     </nav>
   </header>
 
@@ -70,7 +70,7 @@
 
   <section id="contact">
     <h2>联系我</h2>
-    <p>Email: <a href="wangxufan1997@gmail.com">yourname@example.com</a></p>
+    <p>Email: <a href="wangxufan1997@gmail.com">wangxufan1997@gmail.com</a></p>
   </section>
 
   <footer>
