--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <h1>你好，我是 王旭凡</h1>
     <p>这是我的个人网站，记录学习与生活。</p>
     <nav>
-      <a href="about.HTML">关于我</a>
-      <a href="blog.HTML">学习记录</a>
+      <a href="about.html">关于我</a>
+      <a href="blog.html">学习记录</a>
       <a href="WWW.BILIBILI.COM">联系我</a>
     </nav>
   </header>
