--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
     <nav>
       <a href="about.html">关于我</a>
       <a href="blog.html">学习记录</a>
-      <a href="WWW.BILIBILI.COM">联系我</a>
+      <a href="https://www.bilibili.com">联系我</a>
     </nav>
   </header>
 
   <section id="about">
     <h2>关于我</h2>
-    <p>我是一个二次元爱好者</p>
+    <p>我是一个二次元爱好者b站用户 一本凡尘</p>
   </section>
 
   <section id="blog">
